# usbip-next

./: README  cleanup.sh  install.sh
Documentation/usb/: usbip_protocol.txt
drivers/usb/usbip/: Kconfig  Makefile  stub_dev.c  stub_rx.c  stub_tx.c  usbip_common.c  usbip_common.h  usbip_ux.c  usbip_ux.h  vhci.h  vhci_hcd.c  vhci_rx.c  vhci_sysfs.c  vhci_tx.c  vudc_dev.c  vudc_rx.c  vudc_sysfs.c  vudc_tx.c
include/uapi/linux/: usbip_api.h  usbip_ux.h
tools/usb/usbip/: Makefile.am  README  configure.ac
tools/usb/usbip/api-example/: Makefile.am  README  cleanup.sh  configure.ac
tools/usb/usbip/api-example/doc/: usbip_ex_cmd_attach.8  usbip_ex_cmd_bind.8  usbip_ex_cmd_connect.8  usbip_ex_cmd_detach.8  usbip_ex_cmd_disconnect.8  usbip_ex_cmd_list_local.8  usbip_ex_cmd_list_remote.8  usbip_ex_cmd_port.8  usbip_ex_cmd_unbind.8  usbip_ex_daemon_app.8  usbip_ex_daemon_dev.8  usbipd.8
tools/usb/usbip/api-example/src/: Makefile.am  usbip_ex.h  usbip_ex_cmd_attach.c  usbip_ex_cmd_bind.c  usbip_ex_cmd_connect.c  usbip_ex_cmd_detach.c  usbip_ex_cmd_disconnect.c  usbip_ex_cmd_list_local.c  usbip_ex_cmd_list_remote.c  usbip_ex_cmd_port.c  usbip_ex_cmd_unbind.c  usbip_ex_daemon.c  usbip_ex_net_client.c  usbip_ex_net_common.c  usbip_ex_net_server.c
tools/usb/usbip/doc/: usbip.8  usbip_attach_device.3  usbip_bind_device.3  usbip_break_all_connections.3  usbip_break_connection.3  usbip_conn_init.3  usbip_driver_close.3  usbip_hdriver_set.3  usbip_recv_pdu.3  usbip_set_use_debug.3  usbip_set_use_stderr.3  usbip_sock_init.3  usbip_update_driver.3  usbipa.8  usbipd.8  usbipd_driver_open.3  usbipd_recv_pdu.3
tools/usb/usbip/libsrc/: Makefile.am  list.h  names.c  names.h  usbip_common.c  usbip_common.h  usbip_config.h  usbip_device_driver.c  usbip_host_api.c  usbip_host_common.c  usbip_host_common.h  usbip_host_driver.c  usbip_ux.c  usbip_ux.h  vhci_driver.c  vhci_driver.h
tools/usb/usbip/libusb/: Makefile.am  cleanup.sh  configure.ac
tools/usb/usbip/libusb/doc/: usbip_libusb.8  usbipd_libusb.8
tools/usb/usbip/libusb/libsrc/: Makefile.am  dummy_device_driver.c
tools/usb/usbip/libusb/os/: usbip_os.h  usbip_sock.h
tools/usb/usbip/libusb/os/darwin/: BUILD  README  usbip_os.h
tools/usb/usbip/libusb/os/unix/: BUILD
tools/usb/usbip/libusb/os/win32/: BUILD  README  copy_usbip_to_win32.sh  usbip_os.h  usbip_sock.h
tools/usb/usbip/libusb/src/: Makefile.am
tools/usb/usbip/libusb/stub/: Makefile.am  stub.h  stub_common.c  stub_common.h  stub_dev.c  stub_event.c  stub_main.c  stub_rx.c  stub_tx.c
tools/usb/usbip/src/: Makefile.am  usbip.c  usbip.h  usbip_attach.c  usbip_bind.c  usbip_connect.c  usbip_detach.c  usbip_disconnect.c  usbip_list.c  usbip_network.c  usbip_network.h  usbip_port.c  usbip_unbind.c  usbipd.c  usbipd.h  usbipd_app.c  usbipd_dev.c
